--- a/CapitalOne_Interview.Tests/CapitalOne_Interview.Tests.csproj
+++ b/CapitalOne_Interview.Tests/CapitalOne_Interview.Tests.csproj
@@ -49,15 +49,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProcessTest.CalculateTransactionsTest.g.cs">
-      <DependentUpon>ProcessTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ProcessTest.cs" />
-    <Compile Include="ProcessTest.GetCreditCardTransactionsTest.g.cs">
-      <DependentUpon>ProcessTest.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
+    <Compile Include="TrasactionDataAccessTest.CalculateTransactionsTest.g.cs">
+      <DependentUpon>TrasactionDataAccessTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TrasactionDataAccessTest.cs" />
+    <Compile Include="TrasactionDataAccessTest.GetCreditCardTransactionsTest.g.cs">
+      <DependentUpon>TrasactionDataAccessTest.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
